@@ -3,3 +3,6 @@ Revision history for perl distribution Devel-MojoProf
 0.01 Not Released
  - Started project
  - Add profiling for Mojo::UserAgent
+ - Add profiling for Mojo::Pg
+ - Add profiling for Mojo::SQLite
+ - Add profiling for Mojo::mysql
